{
    "name": "CheatCodesInput",
    "maps": [
        {
            "name": "Cheats",
            "id": "7f05fb89-e1b0-4790-b48a-51ff8d4d92ff",
            "actions": [
                {
                    "name": "InfiniteHealth",
                    "type": "Button",
                    "id": "97f5bb05-7ee2-4f8f-bc7b-f62e8c2585e4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "NoclipMode",
                    "type": "Button",
                    "id": "dfc6ec95-11df-4194-9b7c-80f782dac41d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ToggleChunkCheatVisibility",
                    "type": "Button",
                    "id": "271fd6fa-3b02-46eb-9572-b2d0451d483e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "cd3b1c70-cf22-420c-8261-c9717e67b66c",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InfiniteHealth",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "30e2262b-553c-4011-b487-eab09024dd60",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NoclipMode",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c0a11804-f1fc-4a1e-b604-02e043fa9d4e",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleChunkCheatVisibility",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}